Bug 582412 - Implement @formmethod, @formenctype. r=smaug sr=sicking a2.0=blocking